tlatools/examples/GenProcessOnly.toolbox/Model_1_SnapShot_1655299751479/MC.out
@!@!@STARTMSG 2262:0 @!@!@
TLC2 Version 2.16 of 31 December 2020 (rev: cdddf55)
@!@!@ENDMSG 2262 @!@!@
@!@!@STARTMSG 2187:0 @!@!@
Running breadth-first search Model-Checking with fp 4 and seed 5150949886593398964 with 2 workers on 4 cores with 1175MB heap and 2641MB offheap memory [pid: 34920] (Windows 10 10.0 amd64, AdoptOpenJDK 14.0.1 x86_64, OffHeapDiskFPSet, DiskStateQueue).
@!@!@ENDMSG 2187 @!@!@
@!@!@STARTMSG 2220:0 @!@!@
Starting SANY...
@!@!@ENDMSG 2220 @!@!@
Parsing file C:\Users\zunai\OneDrive\Desktop\DistributedPlusCal-newrelease\tlatools\examples\GenProcessOnly.toolbox\Model_1\MC.tla
Parsing file C:\Users\zunai\OneDrive\Desktop\DistributedPlusCal-newrelease\tlatools\examples\GenProcessOnly.toolbox\Model_1\GenProcessOnly.tla

Unrecoverable error:
 -- Command-line error: Unknown or illegal option in options statement: -distpcal..


Unrecoverable error:
 -- Expected "end" but found "begin"
    line 18, column 1.

!! WARNING: The PlusCal algorithm and its TLA+ translation in module GenProcessOnly filename since the last translation.
Parsing file C:\Users\zunai\Music\LORIAINTERNWORK\TLAToolbox-1.7.1-win32.win32.x86_64\toolbox\plugins\org.lamport.tlatools_1.0.0.202012311918\tla2sany\StandardModules\TLC.tla
Parsing file C:\Users\zunai\Music\LORIAINTERNWORK\TLAToolbox-1.7.1-win32.win32.x86_64\toolbox\plugins\org.lamport.tlatools_1.0.0.202012311918\tla2sany\StandardModules\Naturals.tla
Parsing file C:\Users\zunai\Music\LORIAINTERNWORK\TLAToolbox-1.7.1-win32.win32.x86_64\toolbox\plugins\org.lamport.tlatools_1.0.0.202012311918\tla2sany\StandardModules\Integers.tla
Parsing file C:\Users\zunai\Music\LORIAINTERNWORK\TLAToolbox-1.7.1-win32.win32.x86_64\toolbox\plugins\org.lamport.tlatools_1.0.0.202012311918\tla2sany\StandardModules\Sequences.tla
Parsing file C:\Users\zunai\Music\LORIAINTERNWORK\TLAToolbox-1.7.1-win32.win32.x86_64\toolbox\plugins\org.lamport.tlatools_1.0.0.202012311918\tla2sany\StandardModules\FiniteSets.tla
Semantic processing of module Naturals
Semantic processing of module Sequences
Semantic processing of module FiniteSets
Semantic processing of module TLC
Semantic processing of module Integers
Semantic processing of module GenProcessOnly
Semantic processing of module MC
@!@!@STARTMSG 2219:0 @!@!@
SANY finished.
@!@!@ENDMSG 2219 @!@!@
@!@!@STARTMSG 2185:0 @!@!@
Starting... (2022-06-15 13:29:10)
@!@!@ENDMSG 2185 @!@!@
@!@!@STARTMSG 2239:1 @!@!@
TLC cannot handle this conjunct of the spec:
line 138, col 12 to line 143, col 75 of module GenProcessOnly
@!@!@ENDMSG 2239 @!@!@
@!@!@STARTMSG 2186:0 @!@!@
Finished in 1262ms at (2022-06-15 13:29:10)
@!@!@ENDMSG 2186 @!@!@
