tlatools/examples/GenProcessOnly.toolbox/Model_1_SnapShot_1655299751479/MC.tla
---- MODULE MC ----
EXTENDS GenProcessOnly, TLC

\* CONSTANT definitions @modelParameterConstants:0P
const_165529974939323000 == 
2
----

\* CONSTANT definitions @modelParameterConstants:1Q
const_165529974939324000 == 
2
----

=============================================================================
\* Modification History
\* Created Wed Jun 15 13:29:09 GMT 2022 by zunai
